--- a/style/changeless.css
+++ b/style/changeless.css
@@ -5,10 +5,20 @@
     --orangecolor: #ff5722;
     --bluecolor: #2266f4;
     --greencolor: #008000;
-    
+
     --matncolor: #4d4d4d;
     --titleh2: #000000;
     --subtitleh3: #333333;
     --subtitlep: #9b9b9b;
+}
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "yekan";
+}
+
+body {
+    direction: rtl;
 }
