--- a/style/header.css
+++ b/style/header.css
@@ -1,7 +1,47 @@
 #main_header {
     background-color: var(--headernavbarbg);
+    border-bottom: 1px solid #ddd;
+    width: 100%;
+    height: 60px;
+    padding: 0 10%;
+    display: flex;
+    position: fixed;
+
+}
+.header, .navbar_brand, .nav_link_container, .nav_links {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
-.header {
-    display: flex;
+#main_header .header {
+    width: 100%;
+
+}
+
+#main_header .header .navbar_brand:hover .text{   
+   fill: #FF5B35;
+}
+#main_header .header .navbar_brand:hover .line {
+    fill: #000;
+}
+
+#main_header .header .nav_link_container .nav_links li {
+    padding: 0 1rem;
+}
+#main_header .header .nav_link_container .nav_links a:hover {
+    color: var(--orangecolor);
+}
+
+#main_header .header .nav_link_container .join_tap30 a {
+    background-color: var(--orangecolor);
+    border: none;
+    border-radius: 0.5rem;
+    padding: 0.25rem 2rem;
+    color: #fff;
+    margin-right: 2rem;
+    display: block;
+}
+#main_header .header .nav_link_container .join_tap30 a:hover {
+    transform: scale(0.98);
 }
