remove text decoration for a and list style type for li

--- a/style/changeless.css
+++ b/style/changeless.css
@@ -22,3 +22,11 @@
 body {
     direction: rtl;
 }
+
+a {  
+    text-decoration: none;
+    color: var(--headernavbarcolor);
+}
+li {
+    list-style-type: none;
+}
