--- a/style/header.css
+++ b/style/header.css
@@ -2,7 +2,7 @@
     background-color: var(--headernavbarbg);
     border-bottom: 1px solid #ddd;
     width: 100%;
-    height: 60px;
+    min-height: 4rem;
     padding: 0 10%;
     display: flex;
     position: fixed;
@@ -12,11 +12,11 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 #main_header .header {
     width: 100%;
-
 }
 
 #main_header .header .navbar_brand:hover .text{   
@@ -28,6 +28,9 @@
 
 #main_header .header .nav_link_container .nav_links li {
     padding: 0 1rem;
+}
+#main_header .header .nav_link_container .nav_links a{
+    color: var(--headernavbarcolor);
 }
 #main_header .header .nav_link_container .nav_links a:hover {
     color: var(--orangecolor);
