--- a/style/footer.css
+++ b/style/footer.css
@@ -67,3 +67,19 @@
     display: flex;
     align-items: center;
 }
+.footer .footer_container .social_container {
+    margin-top: 1rem;
+}
+.footer .footer_container .social_container .social_links {
+    height: 20px;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 1rem;
+}
+.footer .footer_container .social_container .social_links img {
+    width: 100%;
+    height: 100%;
+}
+.footer .footer_container .social_container .social_links a:hover img {
+    filter:  sepia(100%) brightness(100%) contrast(1) saturate(60);
+}
