--- a/style/header.css
+++ b/style/header.css
@@ -5,7 +5,7 @@
     min-height: 4rem;
     padding: 0 10%;
     display: flex;
-    position: fixed;
+    /* position: fixed; */
 
 }
 .header, .navbar_brand, .nav_link_container, .nav_links {
