--- a/style/changeless.css
+++ b/style/changeless.css
@@ -26,17 +26,32 @@ body {
 
 a {  
     text-decoration: none;
-
 }
 li {
     list-style-type: none;
 }
 
-.title {
-    font-size: 50px;
-    font-weight: 700;
+.btn_header {
+    border: none;
+    width: 10rem;
+    padding: 0.25rem 0;
+    text-align: center;
+    border-radius: 0.5rem;
+    color: #fff;
+    display: block;
 }
-.sub_title {
-    font-size: 24px;
-    margin-bottom: 30px;
+
+.title { /*for tag h2 in main section*/
+    color: #000;
+    font-size: 35px;
+    font-weight: 700;
+    margin-bottom: 20px;
+}
+
+.sub_title{ /*for tag h3 in main section*/
+    color: #4d4d4d;
+    font-size: 22px;
+    font-weight: 500;
+    margin-bottom: 20px;
+    margin-top: 50px;
 }
